=============
Release 0.6.6
=============

* fix for matplotlib 2.2.2
* fix a bug when loading merged data with phy GUI
* faster support for native MCD file with pyMCStream
* more robust whitening for large arrays with numerous overlaps

=============
Release 0.6.5
=============

* reduce memory consumption for mixture removal with shared memory
* made an explicit parameter cc_mixtures for mixture removal in the [clustering] section
* Minor fixes in the MATLAB GUI
* fix in the exact times shown during preview if second is specified
* prevent errors if filter is False and overwrite is False

=============
Release 0.6.4
=============

* fix a bug in the BEER for windows platforms, enhancing robustness to mpi data types
* speed up the software when using ignore_dead_times
* ensure backward compatibility with hdf5 version for MATLAB
* fix a rare bug in clustering, when no spikes are found on electrodes
* fix a bug in the MATLAB GUI when reloading saved results, skipping overlap fixes

=============
Release 0.6.3
=============

* fix a bug if the parameter file have tabulations characters
* add a tab to edit parameters directly in the launcher GUI
* fix dtype offset for int32 and int64
* minor optimizations for computations of overlaps
* explicit message displayed on screen if filtering has already been performed
* can specify a distinct folder for output results with output_dir parameter
* fix a bug when launching phy GUI for datafiles without data_offset parameter (HDF5)
* fix a memory leak when using dead_times
* fix a bug for BRW and python3
* fix a bug in the BEER
* pin HDF5 to 1.8.18 versions, as MATLAB is not working well with 1.10
* fix a bug when relaunching code and overwrite is False
* make the multi-files more robust, also reading all files in a directory
* fix a bug when peak detection is set on both with only one channel

=============
Release 0.6.2
=============

* fix for openephys and new python syntax
* fix in the handling of parameters 